--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         </div>
     </div>
         <div class="jumbotron">
-    <h1>KaunasPHP v.25</h1>
+    <h1>KaunasPHP v.26</h1>
     <h3>2015-04-15 19:00, @ <a href="http://goo.gl/M98mji">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a></h3>
     <h3>Pranešimai:</h3>
-    <div style="text-align: left; font-size: 16px;">1. Gediminas Morkevicius - Trending Web Technologies<br/>
-        2. Povilas Poderskis - dc.js<br/>
+    <div style="text-align: left; font-size: 16px;">1. Juozas Joe Kaziukėnas - From PHP to machine code<br/>
+        2. Laurynas Tretjakovas - Automated Infrastructure with Puppet, Ansible, Vagrant and Docker<br/>
     </div>
-    <h4>After Party @ <a href="https://www.facebook.com/republicbaras3">Republic No.3</a></h4>
-        <p><br/><a href="https://www.facebook.com/events/372472912954778/" class="btn btn-success"><i class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
+    <h4>After Party vyks vietiniame kiemelyje kartu su susitikimo rėmėjų <a href="https://www.facebook.com/datadogdev">DATA DOG</a> kepamais dešrainiais ir gėrimais :)</h4>
+        <p><br/><a href="https://www.facebook.com/events/380699738804969/" class="btn btn-success"><i class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
 </div>
 
         <div class="row marketing">
@@ -43,7 +43,34 @@
         <div class="panel panel-primary">
             <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Buvę susitikimai</div>
             <div class="panel-group" id="accordion2">
-                    <div class="panel">
+    <div class="panel">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse0">
+                    KaunasPHP v.25 (2015-04-15 19:00)
+                </a>
+            </h4>
+        </div>
+        <div id="collapse0" class="panel-collapse collapse in">
+            <div class="panel-body">
+                <ul>
+                                            <li>Trending Web Technologies
+                            <ul>
+                                <li><a href="">Gediminas Morkevicius</a></li>
+                            </ul>
+                        </li>
+                                            <li>dc.js
+                            <ul>
+                                <li><a href="">Povilas Poderskis</a></li>
+                            </ul>
+                        </li>
+                                    </ul>
+                <a href="https://www.facebook.com/events/372472912954778/" target="_blank"><img src="media/img/facebook.png" /></a>
+                <a nohref target="_blank"><img src="media/img/github-icon.jpg" /></a>
+            </div>
+        </div>
+    </div>
+    <div class="panel">
         <div class="panel-heading">
             <h4 class="panel-title">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse0">
@@ -66,7 +93,7 @@
                         </li>
                                     </ul>
                 <a href="https://www.facebook.com/events/1656688004567243/" target="_blank"><img src="media/img/facebook.png" /></a>
-                <a href="https://github.com/kaunasphp/kaunasphp-meetups/tree/master/KaunasPHP.v23" target="_blank"><img src="media/img/github-icon.jpg" /></a>
+                <a href="https://github.com/kaunasphp/kaunasphp-meetups/tree/master/KaunasPHP.v24" target="_blank"><img src="media/img/github-icon.jpg" /></a>
             </div>
         </div>
     </div>
