Speakers for v.28 event

--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
         </div>
     </div>
         <div class="jumbotron">
-    <h1>KaunasPHP v.26</h1>
-    <h3>2015-05-13 19:00, @ <a href="http://goo.gl/M98mji">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a></h3>
+    <h1>KaunasPHP v.28</h1>
+    <h3>2015-09-08 19:00, @ <a href="http://goo.gl/M98mji">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a></h3>
     <h3>Pranešimai:</h3>
-    <div style="text-align: left; font-size: 16px;">1. Juozas Joe Kaziukėnas - From PHP to machine code<br/>
-        2. Laurynas Tretjakovas - Automated Infrastructure with Puppet, Ansible, Vagrant and Docker<br/>
+    <div style="text-align: left; font-size: 16px;">1. Povilas Balzaravičius - <b>Reducing load with RabbitMQ</b><br>
+2. Žilvinas Kuusas - <b>Baby Steps to Domain-Driven Design</b>
     </div>
-    <h4>After Party vyks vietiniame kiemelyje kartu su susitikimo rėmėjų <a href="https://www.facebook.com/datadogdev">DATA DOG</a> kepamais dešrainiais ir gėrimais :)</h4>
-        <p><br/><a href="https://www.facebook.com/events/380699738804969/" class="btn btn-success"><i class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
+        <p><br/><a href="https://www.facebook.com/events/1655446118034888/" class="btn btn-success"><i class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
 </div>
 
         <div class="row marketing">
@@ -43,6 +42,33 @@
         <div class="panel panel-primary">
             <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Buvę susitikimai</div>
             <div class="panel-group" id="accordion2">
+    <div class="panel">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse25">
+                    KaunasPHP v.26 (2015-05-13 19:00)
+                </a>
+            </h4>
+        </div>
+        <div id="collapse25" class="panel-collapse collapse in">
+            <div class="panel-body">
+                <ul>
+                                            <li>From PHP to machine code
+                            <ul>
+                                <li><a href="">Juozas Joe Kaziukėnas </a></li>
+                            </ul>
+                        </li>
+                                            <li>Automated Infrastructure with Puppet, Ansible, Vagrant and Docker
+                            <ul>
+                                <li><a href="">Laurynas Tretjakovas</a></li>
+                            </ul>
+                        </li>
+                                    </ul>
+                <a href="https://www.facebook.com/events/372472912954778/" target="_blank"><img src="media/img/facebook.png" /></a>
+                <a nohref target="_blank"><img src="media/img/github-icon.jpg" /></a>
+            </div>
+        </div>
+    </div>
     <div class="panel">
         <div class="panel-heading">
             <h4 class="panel-title">
