--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
         </div>
     </div>
         <div class="jumbotron">
-    <h1>KaunasPHP v.28</h1>
-    <h3>2015-09-08 19:00, @ <a href="http://goo.gl/M98mji">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a></h3>
+    <h1>KaunasPHP v.29 CodeWeek edition</h1>
+    <h3>2015-10-14 19:00, @ <a href="http://goo.gl/M98mji">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a></h3>
     <h3>Pranešimai:</h3>
-    <div style="text-align: left; font-size: 16px;">1. Povilas Balzaravičius - <b>Reducing load with RabbitMQ</b><br>
-2. Žilvinas Kuusas - <b>Baby Steps to Domain-Driven Design</b>
+    <div style="text-align: left; font-size: 16px;">1. Mažvydas Skuodas - <b>Abstrakcija arba Nuo ko pradėti programą?</b><br>
+2. Linas Gricius - <b>PHP Coding standards: Basics</b><br/>
+3. Marijus Kilmanas - <b>Xdebug: What is it good for?</b><br/>
+4. Darius Grigalevicius - <b>Symfony 101: The Basics</b><br/>
     </div>
-        <p><br/><a href="https://www.facebook.com/events/1655446118034888/" class="btn btn-success"><i class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
+        <p><br/><a href="https://www.facebook.com/events/483142898528038/" class="btn btn-success"><i class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
 </div>
 
         <div class="row marketing">
@@ -42,6 +44,33 @@
         <div class="panel panel-primary">
             <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Buvę susitikimai</div>
             <div class="panel-group" id="accordion2">
+    <div class="panel">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse25">
+                    KaunasPHP v.28 (2015-09-08 19:00)
+                </a>
+            </h4>
+        </div>
+        <div id="collapse25" class="panel-collapse collapse in">
+            <div class="panel-body">
+                <ul>
+                        <li>Reducing load with RabbitMQ
+                            <ul>
+                                <li><a href="">Povilas Balzaravičius</a></li>
+                            </ul>
+                        </li>
+                        <li>Baby Steps to Domain-Driven Design
+                            <ul>
+                                <li><a href="">Žilvinas Kuusas</a></li>
+                            </ul>
+                        </li>
+                </ul>
+                <a href="https://www.facebook.com/events/1655446118034888/" target="_blank"><img src="media/img/facebook.png" /></a>
+                <a nohref target="_blank"><img src="media/img/github-icon.jpg" /></a>
+            </div>
+        </div>
+    </div>
     <div class="panel">
         <div class="panel-heading">
             <h4 class="panel-title">
