fixing marketing links

--- a/index.html
+++ b/index.html
@@ -939,24 +939,21 @@
         <div class="panel-heading"><i class="glyphicon glyphicon-euro"></i> Rėmėjai</div>
         <div class="panel-body">
             <ul class="list-inline">
-                <li><a href="https://www.facebook.com/StartupSpace" target="_blank"><img
-                        src="media/img/startup_space1.jpg"/></a></li>
+                <li><a href="http://www.datadog.lt" target="_blank"><img src="media/img/datadog.png" width="160"/></a></li>
                 <li><a href="http://www.nfq.lt" target="_blank"><img src="media/img/nfq.png"/></a></li>
-                <li><a href="http://www.jetbrains.com/phpstorm/"
-                       style="display:block; background:#fff url(http://www.jetbrains.com/phpstorm/documentation/phpstorm_banners/phpstorm1/phpstorm234x60_white.gif) no-repeat 0 0; border:solid 1px #ffffff; margin:8px 0;padding:0;text-decoration:none;text-indent:0;letter-spacing:-0.001em; width:252px; height:58px"
-                       alt="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"
-                       title="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"><span
-                        style="margin: -2px 0 0 59px;padding: 0;float: left;font-size: 10px;cursor:pointer;  background-image:none;border:0;color: #5854b5; font-family: trebuchet ms,arial,sans-serif;font-weight: normal;text-align:left;">Addicted to</span><span
-                        style="margin:36px 0 0 7px;padding:0 0 2px 0; line-height:10px;font-size:11px;cursor:pointer;  background-image:none;border:0;display:block;width:240px; color:#5854b5; font-family:trebuchet ms,arial,sans-serif;font-weight: normal;text-align:left;">Smart IDE for PHP development with HTML, CSS &amp; JavaScript support</span></a>
-                </li>
-                <li><a href="http://www.inviqa.com" target="_blank"><img src="media/img/inviqa-logo.png"
-                                                                         height="74"/></a></li>
-            </ul>
-            <ul class="list-inline">
-                <li><a href="http://www.datadog.lt" target="_blank"><img src="media/img/datadog.png" width="160"/></a>
-                </li>
+                <li><a href="https://www.intermedix.com/?utm_source=kaunasphp.lt" target="_blank"><img src="media/img/IMX-logo-Web.png"/></a></li>
                 <li><a href="http://lt.insidewarehouse.com/" target="_blank"><img src="media/img/insidewarehouse.png"
                                                                                   width="160"/></a></li>
+            </ul>
+            <ul class="list-inline">
+                <li><a href="http://www.inviqa.com" target="_blank"><img src="media/img/inviqa-logo.png"
+                                                                         height="74"/></a></li>
+                <li class="pull-right"><a href="http://www.jetbrains.com/phpstorm/features/"
+                       alt="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"
+                       title="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"><img
+                        src="media/img/logo_PhpStorm.png"></a>
+                </li>
+
             </ul>
         </div>
     </div>
