updating meetup info

--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
         </div>
     </div>
     <div class="jumbotron">
-        <h1>KaunasPHP v.30</h1>
-        <h3>2015-12-16 19:00, @ <a href="https://goo.gl/maps/N8DLHb5Qxst">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a>
+        <h1>KaunasPHP v.34</h1>
+        <h3>2016-04-20 19:00, @ <a href="https://goo.gl/maps/N8DLHb5Qxst">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a>
         </h3>
         <h3>Pranešimai:</h3>
-        <div style="text-align: left; font-size: 16px;">1. Giedrius Krisciukaitis, PMP - <b>Greitaveikos testavimas su
+        <div style="text-align: left; font-size: 16px;">TBA</div>
+        <!-- div style="text-align: left; font-size: 16px;">1. Giedrius Krisciukaitis, PMP - <b>Greitaveikos testavimas su
             JMeter, BlazeMeter, New Relic – nauda bei įspūdžiai</b><br/>
             <ul>
                 <li>JMeter testavimo plano apžvalga (cookies, sesija, javascript, statinis turinys, formatas)</li>
@@ -42,8 +43,8 @@
             </ul>
 
             2. Tadas Juozapaitis - <b>"Ilgai laukta ir sulaukta - PHP7"</b>
-        </div>
-        <p><br/><a href="https://www.facebook.com/events/988807237851941/" class="btn btn-success"><i
+        </div -->
+        <p><br/><a href="https://www.facebook.com/events/847410888721374/" class="btn btn-success"><i
                 class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
     </div>
 
@@ -56,12 +57,119 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapse33">
+                                    KaunasPHP v.33 (2016-03-16 19:00)
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapse33" class="panel-collapse collapse in">
+                            <div class="panel-body">
+                                <ul>
+                                    <li>Canceled</li>
+                                </ul>
+                                <a href="https://www.facebook.com/events/997586743655717/" target="_blank"><img
+                                        src="media/img/facebook.png"/></a>
+                                <a nohref target="_blank"><img src="media/img/github-icon.jpg"/></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapse32">
+                                    KaunasPHP v.32 (2016-02-17 19:00)
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapse32" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <ul>
+                                    <li>PHP prieš Pasaulį [Clojure, Erlang, Ruby]
+                                        <ul>
+                                            <li><a href="">Andrius Buivydas</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>Kodo generavimas
+                                        <ul>
+                                            <li><a href="">Darius Leskauskas</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <a href="https://www.facebook.com/events/1509850879318801/" target="_blank"><img
+                                        src="media/img/facebook.png"/></a>
+                                <a nohref target="_blank"><img src="media/img/github-icon.jpg"/></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapse31">
+                                    KaunasPHP v.31 (2016-01-20 19:00)
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapse31" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <ul>
+                                    <li>Daugiau nei darbas - programuotojo amatas
+                                        <ul>
+                                            <li><a href="">Mažvydas Skuodas</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>Best practices of UI automated testing
+                                        <ul>
+                                            <li><a href="">Ramūnas Klimavičius</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <a href="https://www.facebook.com/events/1697619020524876/" target="_blank"><img
+                                        src="media/img/facebook.png"/></a>
+                                <a nohref target="_blank"><img src="media/img/github-icon.jpg"/></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapse30">
+                                    KaunasPHP v.30 (2015-12-16 19:00)
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapse30" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <ul>
+                                    <li>Greitaveikos testavimas su JMeter, BlazeMeter, New Relic – nauda bei įspūdžiai
+                                        <ul>
+                                            <li><a href="">Giedrius Krisciukaitis, PMP</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>Ilgai laukta ir sulaukta - PHP7
+                                        <ul>
+                                            <li><a href="">Tadas Juozapaitis</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <a href="https://www.facebook.com/events/988807237851941/" target="_blank"><img
+                                        src="media/img/facebook.png"/></a>
+                                <a nohref target="_blank"><img src="media/img/github-icon.jpg"/></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
                                    href="#collapse29">
                                     KaunasPHP v.29 CodeWeek edition (2015-10-14 19:00)
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapse29" class="panel-collapse collapse in">
+                        <div id="collapse29" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <ul>
                                     <li>Abstrakcija arba Nuo ko pradėti programą?
@@ -939,9 +1047,11 @@
         <div class="panel-heading"><i class="glyphicon glyphicon-euro"></i> Rėmėjai</div>
         <div class="panel-body">
             <ul class="list-inline">
-                <li><a href="http://www.datadog.lt" target="_blank"><img src="media/img/datadog.png" width="160"/></a></li>
+                <li><a href="http://www.datadog.lt" target="_blank"><img src="media/img/datadog.png" width="160"/></a>
+                </li>
                 <li><a href="http://www.nfq.lt" target="_blank"><img src="media/img/nfq.png"/></a></li>
-                <li><a href="https://www.intermedix.com/?utm_source=kaunasphp.lt" target="_blank"><img src="media/img/IMX-logo-Web.png"/></a></li>
+                <li><a href="https://www.intermedix.com/?utm_source=kaunasphp.lt" target="_blank"><img
+                        src="media/img/IMX-logo-Web.png"/></a></li>
                 <li><a href="http://lt.insidewarehouse.com/" target="_blank"><img src="media/img/insidewarehouse.png"
                                                                                   width="160"/></a></li>
             </ul>
@@ -949,8 +1059,8 @@
                 <li><a href="http://www.inviqa.com" target="_blank"><img src="media/img/inviqa-logo.png"
                                                                          height="74"/></a></li>
                 <li class="pull-right"><a href="http://www.jetbrains.com/phpstorm/features/"
-                       alt="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"
-                       title="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"><img
+                                          alt="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"
+                                          title="Smart IDE for PHP development with HTML, CSS &amp; JavaScript support"><img
                         src="media/img/logo_PhpStorm.png"></a>
                 </li>
 
