--- a/index.html
+++ b/index.html
@@ -28,23 +28,12 @@
         </div>
     </div>
     <div class="jumbotron">
-        <h1>KaunasPHP v.34</h1>
-        <h3>2016-04-20 19:00, @ <a href="https://goo.gl/maps/N8DLHb5Qxst">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a>
+        <h1>KaunasPHP v.35</h1>
+        <h3>2016-09-21 18:30, @ <a href="https://goo.gl/maps/N8DLHb5Qxst">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a>
         </h3>
         <h3>Pranešimai:</h3>
         <div style="text-align: left; font-size: 16px;">TBA</div>
-        <!-- div style="text-align: left; font-size: 16px;">1. Giedrius Krisciukaitis, PMP - <b>Greitaveikos testavimas su
-            JMeter, BlazeMeter, New Relic – nauda bei įspūdžiai</b><br/>
-            <ul>
-                <li>JMeter testavimo plano apžvalga (cookies, sesija, javascript, statinis turinys, formatas)</li>
-                <li>Access.log nauda ir niuansai po katastrofos</li>
-                <li>BlazeMeter gėris ir blogis</li>
-                <li>New Relic gėris ir blogis</li>
-            </ul>
-
-            2. Tadas Juozapaitis - <b>"Ilgai laukta ir sulaukta - PHP7"</b>
-        </div -->
-        <p><br/><a href="https://www.facebook.com/events/847410888721374/" class="btn btn-success"><i
+        <p><br/><a href="https://www.facebook.com/events/901712413306875/" class="btn btn-success"><i
                 class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
     </div>
 
@@ -53,6 +42,30 @@
             <div class="panel panel-primary">
                 <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Buvę susitikimai</div>
                 <div class="panel-group" id="accordion2">
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapse34">
+                                    KaunasPHP v.34 (2016-04-20 19:00)
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapse34" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <ul>
+                                    <li>"RAML. More than API design"
+                                        <ul>
+                                            <li><a href="">Darius Kasperavičius</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <a href="https://www.facebook.com/events/847410888721374/" target="_blank"><img
+                                        src="media/img/facebook.png"/></a>
+                                <a nohref target="_blank"><img src="media/img/github-icon.jpg"/></a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="panel">
                         <div class="panel-heading">
                             <h4 class="panel-title">
