--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapse34" class="panel-collapse collapse">
+                        <div id="collapse34" class="panel-collapse in">
                             <div class="panel-body">
                                 <ul>
                                     <li>"RAML. More than API design"
@@ -75,7 +75,7 @@
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapse33" class="panel-collapse collapse in">
+                        <div id="collapse33" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <ul>
                                     <li>Canceled</li>
