--- a/index.html
+++ b/index.html
@@ -28,12 +28,30 @@
         </div>
     </div>
     <div class="jumbotron">
-        <h1>KaunasPHP v.35</h1>
-        <h3>2016-09-21 18:30, @ <a href="https://goo.gl/maps/N8DLHb5Qxst">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a>
+        <h1>KaunasPHP v.36 - CodeWeek Edition</h1>
+        <h3>2016-10-19 18:30, @ <a href="https://goo.gl/maps/N8DLHb5Qxst">A. Jakšto g. 6, Kaunas (Kolpingo kolegija)</a>
         </h3>
         <h3>Pranešimai:</h3>
-        <div style="text-align: left; font-size: 16px;">TBA</div>
-        <p><br/><a href="https://www.facebook.com/events/901712413306875/" class="btn btn-success"><i
+        <div style="text-align: left; font-size: 16px;">
+            <ul>
+                <li>"Array Filter/Map/Reduce"
+                    <ul>
+                        <li>Tomas Kmieliauskas</li>
+                    </ul>
+                </li>
+                <li>"Automatinio testavimo su Selenium pagrindai"
+                    <ul>
+                        <li>Jūratė Basevičienė</li>
+                    </ul>
+                </li>
+                <li>"Mockery naudojimas testavime"
+                    <ul>
+                        <li>Linas Gricius</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <p><br/><a href="https://www.facebook.com/events/1137499959651362/" class="btn btn-success"><i
                 class="glyphicon glyphicon-plane"></i> Registruotis į susitikimą</a></p>
     </div>
 
@@ -42,6 +60,32 @@
             <div class="panel panel-primary">
                 <div class="panel-heading"><i class="glyphicon glyphicon-calendar"></i> Buvę susitikimai</div>
                 <div class="panel-group" id="accordion2">
+
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapse35">
+                                    KaunasPHP v.35 (2016-09-21 18:30)
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapse35" class="panel-collapse in">
+                            <div class="panel-body">
+                                <ul>
+                                    <li>"Compiler Pass”
+                                        <ul>
+                                            <li><a href="">Darius Kasperavičius</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <a href="https://www.facebook.com/events/901712413306875/" target="_blank"><img
+                                        src="media/img/facebook.png"/></a>
+                                <a nohref target="_blank"><img src="media/img/github-icon.jpg"/></a>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="panel">
                         <div class="panel-heading">
                             <h4 class="panel-title">
@@ -51,7 +95,7 @@
                                 </a>
                             </h4>
                         </div>
-                        <div id="collapse34" class="panel-collapse in">
+                        <div id="collapse34" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <ul>
                                     <li>"RAML. More than API design"
@@ -66,6 +110,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="panel">
                         <div class="panel-heading">
                             <h4 class="panel-title">
