--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
                 </div>
                 <div class="panel-body">
                     <div class="text-center">
-                        <a href="https://www.google.com/calendar/embed?src=h3achhhuga1du6r2l5hndoah48%40group.calendar.google.com&ctz=Europe/Vilnius"
+                        <a href="http://usergroups.lt/"
                            target="_blank"><img width="60" src="media/img/calendar.png"/></a>
                     </div>
                 </div>
