--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <h3>Pranešimai:</h3>
         <div style="text-align: left; font-size: 16px;">
             <ul>
+                <li>"Scope. OOP"
+                    <ul>
+                        <li>Mindaugas Laurinaitis</li>
+                    </ul>
+                </li>
                 <li>"Array Filter/Map/Reduce"
                     <ul>
                         <li>Tomas Kmieliauskas</li>
