--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>Pranešimai:</h3>
         <div style="text-align: left; font-size: 16px;">
             <ul>
-                <li>"Scope. OOP"
+                <li>"Scopes. OOP"
                     <ul>
                         <li>Mindaugas Laurinaitis</li>
                     </ul>
