Added KaunasPHP event v.37 to archive.

--- a/index.html
+++ b/index.html
@@ -55,6 +55,31 @@
                         <div class="panel-heading">
                             <h4 class="panel-title">
                                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
+                                   href="#collapse37">
+                                    KaunasPHP v.37 (2016-11-16 18:30)
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapse37" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <ul>
+                                    <li>"Feature Toggle: HomeToGo Use Case”
+                                        <ul>
+                                            <li><a href="">Audrius Bugas</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <a href="https://www.facebook.com/events/1795770770637669/" target="_blank"><img
+                                        src="media/img/facebook.png"/></a>
+                                <a nohref target="_blank"><img src="media/img/github-icon.jpg"/></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="panel">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2"
                                    href="#collapse36">
                                     KaunasPHP v.36 (2016-10-19 18:30)
                                 </a>
